static/ssrf/egress-disabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssrf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview
  namespace: ssrf
  labels:
    app: preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview
  template:
    metadata:
     labels:
       app: preview
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - image: connorg/ssrf:0.0.1
        name: preview
---
apiVersion: v1
kind: Service
metadata:
  name: ssrf
  namespace: ssrf
spec:
  selector:
    app: preview
  ports:
    - name: http
      protocol: TCP
      nodePort: 31302
      port: 31302
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ssrf
spec:
  podSelector:
    matchLabels:
      app: preview
  policyTypes:
  - Egress
